Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanBoolean.quorum
class Main
    action Main
        boolean b = false
        boolean bool = false
        b = true
        bool = cast(boolean, b)
        if bool = true
            output "passed"
        end
    end
end