Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanNumberField.quorum
class Main
    boolean bool = false
    action Main
        bool = cast(boolean, 7.5)
    end
end